# rocket-webapi

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs  schema.rs
src/entities/: fruit_entity.rs  mod.rs
src/helpers/: json_response.rs  mod.rs
src/models/: fruit.rs  mod.rs
src/routing/: api_routing.rs  fruit_routing.rs  mod.rs
