[package]
name = "rocket_webapi"
version = "0.1.0"
authors = ["samgarasx <samgarasx@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.2.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
