[package]
name = "rocket_webapi"
version = "0.1.0"
authors = ["samgarasx <samgarasx@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
diesel = { version = "1.4.2", features = ["sqlite"] }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "diesel_sqlite_pool"]
